Moved UpdateQuality() to QualityItem
GildedRose is now only 23 lines long; all logic is in QualityItem now.

--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Item.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QualityItem.cs" />
     <Compile Include="Tests\GildedRoseUpdateQualityShould.cs" />
   </ItemGroup>
   <ItemGroup>
