--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QualityItem.cs" />
+    <Compile Include="Tests\NormalQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\GildedRoseUpdateQualityShould.cs" />
   </ItemGroup>
   <ItemGroup>
