--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -49,12 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AgedBrieQualityItem.cs" />
     <Compile Include="GildedRose.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="NormalQualityItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QualityItem.cs" />
+    <Compile Include="Tests\AgedBrieQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\NormalQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\GildedRoseUpdateQualityShould.cs" />
   </ItemGroup>
