--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -56,7 +56,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QualityItem.cs" />
+    <Compile Include="SulfurasQualityItem.cs" />
     <Compile Include="Tests\AgedBrieQualityItemUpdateQualityShould.cs" />
+    <Compile Include="Tests\SulfurasQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\NormalQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\GildedRoseUpdateQualityShould.cs" />
   </ItemGroup>
