Backstage Pass implemented
Removing duplicate/redundant tests on UpdateQuality
Added BackstagePassQualityItem with tests.
Need to update UpdateQuality() to use new subclasses
Need to implement and test CreateFromItem()

--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgedBrieQualityItem.cs" />
+    <Compile Include="BackstagePassQualityItem.cs" />
     <Compile Include="GildedRose.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="NormalQualityItem.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="QualityItem.cs" />
     <Compile Include="SulfurasQualityItem.cs" />
     <Compile Include="Tests\AgedBrieQualityItemUpdateQualityShould.cs" />
+    <Compile Include="Tests\BackstagePassQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\SulfurasQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\NormalQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\GildedRoseUpdateQualityShould.cs" />
