--- a/src/GildedRoseKata/GildedRoseKata.csproj
+++ b/src/GildedRoseKata/GildedRoseKata.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="AgedBrieQualityItem.cs" />
     <Compile Include="BackstagePassQualityItem.cs" />
+    <Compile Include="ConjuredQualityItem.cs" />
     <Compile Include="GildedRose.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="NormalQualityItem.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="SulfurasQualityItem.cs" />
     <Compile Include="Tests\AgedBrieQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\BackstagePassQualityItemUpdateQualityShould.cs" />
+    <Compile Include="Tests\ConjuredQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\QualityItemCreateFromItemShould.cs" />
     <Compile Include="Tests\SulfurasQualityItemUpdateQualityShould.cs" />
     <Compile Include="Tests\NormalQualityItemUpdateQualityShould.cs" />
